--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 
             <div>            
                     <p><button>Last Modified</button><p></p>
-                    &amp; | All rights reserved</p>
+                    All rights reserved</p>
             </div>
         
     </div>
-
-</body></html>
+    <script src="code.js"></script>
+</body>
+</html>
